ganti price menjadi harga

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,8 +97,7 @@
         })
         .then(response => response.json())
         .then(data => {
-            console.log(data)
-            priceDiv.innerHTML = `<p>Price: ${data.price}</p>`;
+            priceDiv.innerHTML = `<p>Harga: ${data.price}</p>`;
         })
     }
 </script>
