--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,7 @@
         })
         .then(response => response.json())
         .then(data => {
+            console.log(data)
             priceDiv.innerHTML = `<p>Harga: ${data.price}</p>`;
         })
     }
